--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@cash/base-button-library": ["libs/base-button-library/src/index.ts"],
+      "@cash/base-component": ["libs/base-component/src/index.tsx"],
+      "@cash/base-form": ["libs/base-form/src/index.ts"],
+      "@cash/base-input": ["libs/base-input/src/index.ts"],
+      "@cash/base-ui": ["libs/base-ui/src/index.ts"],
+      "@cash/widgets": ["libs/base-button/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
