--- a/libs/base-button-library/project.json
+++ b/libs/base-button-library/project.json
@@ -38,6 +38,12 @@
         "jestConfig": "libs/base-button-library/jest.config.js",
         "passWithNoTests": true
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "commitMessageFormat": "chore(${projectName}): release version ${version}"
+      }
     }
   }
 }
