--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,9 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-angular": "^16.2.1",
+    "@jscutlery/semver": "^2.20.1",
     "@nrwl/cli": "13.8.5",
     "@nrwl/cypress": "13.8.5",
     "@nrwl/eslint-plugin-nx": "13.8.5",
@@ -48,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
