--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@wanderyt/base-button-library": ["libs/base-button-library/src/index.ts"],
+      "@wanderyt/base-button-library": [
+        "libs/base-button-library/src/index.ts"
+      ],
       "@wanderyt/base-component": ["libs/base-component/src/index.tsx"],
       "@wanderyt/base-form": ["libs/base-form/src/index.ts"],
       "@wanderyt/base-input": ["libs/base-input/src/index.ts"],
