--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-angular": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@jscutlery/semver": "^2.20.1",
     "@nrwl/cli": "13.8.5",
     "@nrwl/cypress": "13.8.5",
