--- a/libs/base-input/project.json
+++ b/libs/base-input/project.json
@@ -42,7 +42,8 @@
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
-        "commitMessageFormat": "chore(${projectName}): release version ${version}"
+        "commitMessageFormat": "chore(${projectName}): release version ${version}",
+        "baseBranch": "${baseCommit}"
       }
     }
   }
