--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "version": "lerna version --conventional-commits --yes --changelog-preset conventionalcommits"
   },
   "private": true,
   "dependencies": {
