--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "prepare": "husky install",
-    "version": "lerna version --conventional-commits --yes --changelog-preset conventionalcommits"
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
