--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lerna:version": "lerna version --conventional-commits --yes --changelog-preset conventionalcommits",
+    "build:all": "nx run-many --target=build --all"
   },
   "private": true,
   "dependencies": {
