feat: add width

--- a/libs/base-button-library/project.json
+++ b/libs/base-button-library/project.json
@@ -42,6 +42,7 @@
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
+        "push": true,
         "commitMessageFormat": "chore(${projectName}): release version ${version}"
       }
     }
