--- a/libs/base-button-library/project.json
+++ b/libs/base-button-library/project.json
@@ -43,7 +43,15 @@
       "executor": "@jscutlery/semver:version",
       "options": {
         "push": true,
-        "commitMessageFormat": "chore(${projectName}): release version ${version}"
+        "commitMessageFormat": "chore(${projectName}): release version ${version}",
+        "postTargets": ["cash:github"]
+      }
+    },
+    "github": {
+      "executor": "@jscutlery/semver:github",
+      "options": {
+        "tag": "${tag}",
+        "notes": "${notes}"
       }
     }
   }
