--- a/libs/base-input/project.json
+++ b/libs/base-input/project.json
@@ -43,15 +43,7 @@
       "executor": "@jscutlery/semver:version",
       "options": {
         "push": true,
-        "commitMessageFormat": "chore(${projectName}): release version ${version}",
-        "postTargets": ["base-input:github"]
-      }
-    },
-    "github": {
-      "executor": "@jscutlery/semver:github",
-      "options": {
-        "tag": "${tag}",
-        "notes": "${notes}"
+        "commitMessageFormat": "chore(${projectName}): release version ${version}"
       }
     }
   }
