--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:all": "nx run-many --target=build --all",
     "delete:tag": "git tag -d $(git tag -l) && git fetch && git push origin --delete $(git tag -l) && git tag -d $(git tag -l)",
     "release:tag": "git tag -f last-release && git push -f origin last-release",
-    "nx:version": "nx affected --target=version --base=last-release --parallel=1"
+    "nx:version": "nx affected --target=version --base=last-release --parallel=1 --trackDeps"
   },
   "private": true,
   "dependencies": {
